--- a/MauiTemplate/View/OngoingRoutinePage.xaml
+++ b/MauiTemplate/View/OngoingRoutinePage.xaml
@@ -14,10 +14,92 @@
 		<BackButtonBehavior Command="{Binding GoBackCommand}" />
 	</Shell.BackButtonBehavior>
 
-	<VerticalStackLayout>
-		<Label
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="9*" />
+			<RowDefinition Height="1*" />
+		</Grid.RowDefinitions>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition />
+		</Grid.ColumnDefinitions>
+
+		<CarouselView
 			HorizontalOptions="Center"
-			Text="Welcome to .NET MAUI!"
+			HorizontalScrollBarVisibility="Never"
+			IndicatorView="indicatorView"
+			ItemsSource="{Binding AddedExercises}"
+			Loop="False"
+			PeekAreaInsets="30"
+			Position="{Binding}"
+			VerticalScrollBarVisibility="Never">
+			<CarouselView.ItemsLayout>
+				<LinearItemsLayout
+					ItemSpacing="10"
+					Orientation="Horizontal"
+					SnapPointsAlignment="Center"
+					SnapPointsType="MandatorySingle" />
+			</CarouselView.ItemsLayout>
+			<CarouselView.ItemTemplate>
+				<DataTemplate x:DataType="model:AddedExerciseWrapper">
+					<Grid>
+						<Grid.RowDefinitions>
+							<RowDefinition />
+						</Grid.RowDefinitions>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition />
+						</Grid.ColumnDefinitions>
+						<Frame
+							BackgroundColor="#424242"
+							CornerRadius="30"
+							HeightRequest="400"
+							HorizontalOptions="CenterAndExpand"
+							WidthRequest="300">
+							<StackLayout>
+								<Label
+									FontSize="32"
+									HorizontalOptions="Center"
+									Text="{Binding Exercise.Name}" />
+								<VerticalStackLayout HorizontalOptions="Center" IsVisible="{Binding Exercise.TrackReps}">
+									<Label HorizontalOptions="Center" Text="Reps" />
+									<HorizontalStackLayout>
+										<Button Text="-" />
+										<Label Text="0" />
+										<Button Text="+" />
+									</HorizontalStackLayout>
+								</VerticalStackLayout>
+								<VerticalStackLayout HorizontalOptions="Center" IsVisible="{Binding Exercise.TrackWeight}">
+									<Label HorizontalOptions="Center" Text="Weight" />
+									<HorizontalStackLayout>
+										<Button Text="-" />
+										<Label Text="0" />
+										<Button Text="+" />
+									</HorizontalStackLayout>
+								</VerticalStackLayout>
+								<VerticalStackLayout HorizontalOptions="Center" IsVisible="{Binding Exercise.TrackTime}">
+									<Label HorizontalOptions="Center" Text="Time" />
+									<HorizontalStackLayout>
+										<Button Text="-" />
+										<Label Text="0" />
+										<Button Text="+" />
+									</HorizontalStackLayout>
+								</VerticalStackLayout>
+							</StackLayout>
+						</Frame>
+					</Grid>
+				</DataTemplate>
+			</CarouselView.ItemTemplate>
+		</CarouselView>
+
+		<IndicatorView
+			x:Name="indicatorView"
+			HorizontalOptions="Center"
+			IndicatorColor="LightGray"
+			SelectedIndicatorColor="DarkGray" />
+
+
+		<Button
+			Grid.Row="1"
+			Text="Exit"
 			VerticalOptions="Center" />
-	</VerticalStackLayout>
+	</Grid>
 </ContentPage>
